@@ -75,6 +75,54 @@ extern "C" {
 #define gtk_menu_prepend			gtk_menu_shell_prepend
 #define gtk_menu_insert				gtk_menu_shell_insert
 
+#define GTK_TYPE_GDK_WINDOW_TYPE GDK_TYPE_WINDOW_TYPE
+#define GTK_TYPE_GDK_WINDOW_CLASS GDK_TYPE_WINDOW_CLASS
+#define GTK_TYPE_GDK_IMAGE_TYPE GDK_TYPE_IMAGE_TYPE
+#define GTK_TYPE_GDK_VISUAL_TYPE GDK_TYPE_VISUAL_TYPE
+#define GTK_TYPE_GDK_FONT_TYPE GDK_TYPE_FONT_TYPE
+#define GTK_TYPE_GDK_WINDOW_ATTRIBUTES_TYPE GDK_TYPE_WINDOW_ATTRIBUTES_TYPE
+#define GTK_TYPE_GDK_WINDOW_HINTS GDK_TYPE_WINDOW_HINTS
+#define GTK_TYPE_GDK_FUNCTION GDK_TYPE_FUNCTION
+#define GTK_TYPE_GDK_FILL GDK_TYPE_FILL
+#define GTK_TYPE_GDK_FILL_RULE GDK_TYPE_FILL_RULE
+#define GTK_TYPE_GDK_LINE_STYLE GDK_TYPE_LINE_STYLE
+#define GTK_TYPE_GDK_CAP_STYLE GDK_TYPE_CAP_STYLE
+#define GTK_TYPE_GDK_JOIN_STYLE GDK_TYPE_JOIN_STYLE
+#define GTK_TYPE_GDK_CURSOR_TYPE GDK_TYPE_CURSOR_TYPE
+#define GTK_TYPE_GDK_FILTER_RETURN GDK_TYPE_FILTER_RETURN
+#define GTK_TYPE_GDK_VISIBILITY_STATE GDK_TYPE_VISIBILITY_STATE
+#define GTK_TYPE_GDK_EVENT_TYPE GDK_TYPE_EVENT_TYPE
+#define GTK_TYPE_GDK_EVENT_MASK GDK_TYPE_EVENT_MASK
+#define GTK_TYPE_GDK_NOTIFY_TYPE GDK_TYPE_NOTIFY_TYPE
+#define GTK_TYPE_GDK_CROSSING_MODE GDK_TYPE_CROSSING_MODE
+#define GTK_TYPE_GDK_MODIFIER_TYPE GDK_TYPE_MODIFIER_TYPE
+#define GTK_TYPE_GDK_SUBWINDOW_MODE GDK_TYPE_SUBWINDOW_MODE
+#define GTK_TYPE_GDK_INPUT_CONDITION GDK_TYPE_INPUT_CONDITION
+#define GTK_TYPE_GDK_STATUS GDK_TYPE_STATUS
+#define GTK_TYPE_GDK_BYTE_ORDER GDK_TYPE_BYTE_ORDER
+#define GTK_TYPE_GDK_GC_VALUES_MASK GDK_TYPE_GC_VALUES_MASK
+#define GTK_TYPE_GDK_SELECTION GDK_TYPE_SELECTION
+#define GTK_TYPE_GDK_PROPERTY_STATE GDK_TYPE_PROPERTY_STATE
+#define GTK_TYPE_GDK_PROP_MODE GDK_TYPE_PROP_MODE
+#define GTK_TYPE_GDK_INPUT_SOURCE GDK_TYPE_INPUT_SOURCE
+#define GTK_TYPE_GDK_INPUT_MODE GDK_TYPE_INPUT_MODE
+#define GTK_TYPE_GDK_AXIS_USE GDK_TYPE_AXIS_USE
+#define GTK_TYPE_GDK_TARGET GDK_TYPE_TARGET
+#define GTK_TYPE_GDK_SELECTION_TYPE GDK_TYPE_SELECTION_TYPE
+#define GTK_TYPE_GDK_EXTENSION_MODE GDK_TYPE_EXTENSION_MODE
+#define GTK_TYPE_GDK_WM_DECORATION GDK_TYPE_WM_DECORATION
+#define GTK_TYPE_GDK_WM_FUNCTION GDK_TYPE_WM_FUNCTION
+#define GTK_TYPE_GDK_OVERLAP_TYPE GDK_TYPE_OVERLAP_TYPE
+#define GTK_TYPE_GDK_DRAG_ACTION GDK_TYPE_DRAG_ACTION
+#define GTK_TYPE_GDK_DRAG_PROTOCOL GDK_TYPE_DRAG_PROTOCOL
+#define GTK_TYPE_GDK_RGB_DITHER GDK_TYPE_RGB_DITHER
+#define GTK_TYPE_GDK_COLORMAP GDK_TYPE_COLORMAP
+#define GTK_TYPE_GDK_VISUAL GDK_TYPE_VISUAL
+#define GTK_TYPE_GDK_FONT GDK_TYPE_FONT
+#define GTK_TYPE_GDK_WINDOW GDK_TYPE_WINDOW
+#define GTK_TYPE_GDK_DRAG_CONTEXT GDK_TYPE_DRAG_CONTEXT
+#define GTK_TYPE_GDK_EVENT GDK_TYPE_EVENT
+#define GTK_TYPE_GDK_COLOR GDK_TYPE_COLOR
 
 /* strongly deprecated, very likely to be removed in the future:
  */
